package org.pho.questionario;

public class Cruzeiro extends Navio {

        protected int suites;
        protected int piscinas;
        protected int teatros;
        public void ativarModoFesta() {}

}
