package org.pho.questionario;

public class Navegavel {

    public void ancorar() {
    }

    public void atracar() {
    }

    public void navegar() {
    }

    public void bombordo() {
    }

    public void estibordo() {
    }
}
