package org.pho.questionario;

public class Navio extends Navegavel {

    protected String nome;

    protected String registro;

    protected String capitao;

    protected int tripulação;

    protected int passageiros;

    public void embarcar() {
    }

    public void desembarcar() {
    }
}
