package org.pho.questionario;

public class NavioMilitar extends Navio {
        protected String nacionalidade;
        protected String marinheiros;
        protected int armas;
        public void atirar() {}
}
