package org.pho.questionario;

public class PortaAvioes extends NavioMilitar{
        protected int aeronaves;
        protected int pilotos;
        public void autorizarVoo() {}
        public void autorizarPouso() {}
}
