package org.pho.questionario;

public class Submarino extends NavioMilitar {

        protected int torpedos;
        public void submergir() {}
        public void emergir() {}

}
